--- a/src/app/features/modals/file-operations/export-modal/export-modal.component.scss
+++ b/src/app/features/modals/file-operations/export-modal/export-modal.component.scss
@@ -13,7 +13,7 @@
   padding: var(--modal-padding);
   display: flex;
   flex-direction: column;
-  gap: var(--content-gap);
+  gap: var(--space-md);
   overflow-y: auto;
 }
 
