--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,7 +1,7 @@
 .home-wrapper {
   display: flex;
   flex-direction: column;
-  height: 100vh; // Add this - or inherit from parent
+  height: 100vh;
   overflow-x: hidden;
   overflow-y: auto;
 
