--- a/src/app/shared/modals/update-confirmation-dialog/update-confirmation-dialog.component.scss
+++ b/src/app/shared/modals/update-confirmation-dialog/update-confirmation-dialog.component.scss
@@ -20,7 +20,7 @@
   text-align: center;
   position: relative;
   padding: var(--modal-padding);
-  gap: var(--content-gap);
+  gap: var(--space-md);
   overflow-y: auto;
 
   .modal-icon-container {
