--- a/src/app/shared/modals/confirm-modal/confirm-modal.component.scss
+++ b/src/app/shared/modals/confirm-modal/confirm-modal.component.scss
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  gap: var(--content-gap);
+  gap: var(--space-md);
   padding: var(--modal-padding);
 
   // Title styling
@@ -17,7 +17,7 @@
     font-weight: 600;
     color: var(--app-text-color);
     text-align: center;
-    margin: 0 0 var(--content-gap) 0;
+    margin: 0 0 var(--space-md) 0;
     letter-spacing: -0.3px;
     line-height: 1.3;
     position: relative;
