--- a/src/app/shared/modals/input-modal/input-modal.component.scss
+++ b/src/app/shared/modals/input-modal/input-modal.component.scss
@@ -32,7 +32,7 @@
     overflow: auto;
     display: flex;
     flex-direction: column;
-    gap: var(--content-gap);
+    gap: var(--space-md);
     position: relative;
     z-index: 1;
 
