feat: Split the banners to component and move inside the layout folder.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,7 @@
     <app-onboarding class="onboarding" (completed)="finishOnboarding()"></app-onboarding>
   }
   <app-titlebar class="title-bar"></app-titlebar>
+  <app-banner class="banner"></app-banner>
   <app-home class="home-content"></app-home>
   <app-tabs-buttons
     data-tauri-drag-region
