--- a/src/app/features/modals/settings/about-modal/about-modal.component.scss
+++ b/src/app/features/modals/settings/about-modal/about-modal.component.scss
@@ -149,7 +149,7 @@
 
     .overlay-content {
       flex: 1;
-      padding: var(--modal-padding);
+      padding: var(--space-sm);
       overflow: auto;
 
       // Credits Section
