--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -282,43 +282,30 @@ $adwaita-theme-colors: (
   @return mat.get-color-from-palette(map.get($adwaita-theme-colors, $color-name), $hue);
 }
 
-// Then use it in your theme:
 $rclone-manager-warn: mat.m2-define-palette($adwaita-red-palette, 600, 500, 800);
-
-// Use the custom palettes
 $rclone-manager-primary: mat.m2-define-palette($adwaita-green-palette);
-
 $rclone-manager-accent: mat.m2-define-palette($adwaita-blue-palette);
 
-// Create the theme object. A theme consists of configurations for individual
-// theming systems such as "color" or "typography".
 $rclone-manager-theme: mat.m2-define-light-theme(
   (
     color: (
+      theme: light,
       primary: $rclone-manager-primary,
       accent: $rclone-manager-accent,
       warn: $rclone-manager-warn,
     ),
-    typography: mat.m2-define-typography-config(),
-    density: 0,
   )
 );
-
-// Define the palettes for the dark theme
-$rclone-manager-dark-primary: mat.m2-define-palette($adwaita-green-palette);
-$rclone-manager-dark-accent: mat.m2-define-palette($adwaita-blue-palette);
-$rclone-manager-dark-warn: mat.m2-define-palette($adwaita-red-palette, 600, 500, 800);
 
 // Create the dark theme object
 $rclone-manager-dark-theme: mat.m2-define-dark-theme(
   (
     color: (
-      primary: $rclone-manager-dark-primary,
-      accent: $rclone-manager-dark-accent,
-      warn: $rclone-manager-dark-warn,
+      theme: dark,
+      primary: $rclone-manager-primary,
+      accent: $rclone-manager-accent,
+      warn: $rclone-manager-warn,
     ),
-    typography: mat.m2-define-typography-config(),
-    density: 0,
   )
 );
 
